# setop

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  README.org  setop.cabal  setops.cabal  stack.yaml
.hooks/: pre-commit
bench/: SetopBench.hs  SetopsBench.hs  bench.hs
doc/api/: doc-index.html  index.html
doc/api/all/: doc-index-37.html  doc-index-42.html  doc-index-47.html  doc-index-94.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-D.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-L.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-R.html  doc-index-T.html  doc-index-U.html  doc-index-W.html  doc-index-X.html  doc-index-Z.html  index.html
doc/api/doc/: doc-index.html  index.html
doc/api/doc/all/: doc-index-124.html  doc-index-36.html  doc-index-38.html  doc-index-43.html  doc-index-45.html  doc-index-46.html  doc-index-58.html  doc-index-60.html  doc-index-61.html  doc-index-62.html  doc-index-All.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-I.html  doc-index-J.html  doc-index-K.html  doc-index-M.html  doc-index-Q.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  index.html
doc/api/doc/protolude-0.2/: Protolude.html  doc-index-36.html  doc-index-38.html  doc-index-43.html  doc-index-46.html  doc-index-47.html  doc-index-58.html  doc-index-60.html  doc-index-61.html  doc-index-A.html  doc-index-F.html  doc-index-I.html  doc-index-J.html  doc-index-K.html  doc-index-L.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index.html  index.html
doc/api/doc/safe-0.3.15/: index.html  safe.txt
doc/api/doc/setop-0.1.0.0/: Setop.html  doc-index.html  index.html  setop.haddock  setop.txt
doc/api/doc/setop-0.1.0.1/: Setop.html  doc-index.html  index.html  setop.haddock  setop.txt
doc/api/protolude-0.2/: Unsafe.html  doc-index-124.html  doc-index-37.html  doc-index-42.html  doc-index-45.html  doc-index-62.html  doc-index-94.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-G.html  doc-index-H.html  doc-index-M.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html  doc-index-X.html  doc-index-Z.html  protolude.haddock  protolude.txt
doc/api/protolude-0.2/src/: Conv.html  Debug.html  Either.html  Error.html  Functor.html  Monad.html  Panic.html  Protolude.html
doc/api/safe-0.3.15/: Safe-Exact.html  Safe-Foldable.html  Safe-Partial.html  Safe.html  doc-index.html  safe.haddock
doc/api/safe-0.3.15/src/: Safe.Foldable.html  Safe.Util.html  Safe.html
doc/api/setop-0.1.0.0/: LICENSE.txt  Setop.html  doc-index.html  index.html  setop.haddock  setop.txt
doc/api/setop-0.1.0.0/src/: Setop.html
doc/api/setops-0.1.0.0/: Setops.html  doc-index.html  index.html  setops.haddock  setops.txt
doc/api/setops-0.1.0.0/src/: Setops.html
doc/cov/hpc/: index.html
src/: Setop.hs  Setops.hs
test/: SetopSpec.hs  SetopsSpec.hs  doctest.hs  hlint.hs
test/res/: a.set  b.set
(+17 files in other folders)
